# flask-tutorial

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: run-tests.yml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
