[project]
name = "flaskr"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]

[tool.flake8]
exclude = [
    "__pycache__",
    ".git",
    ".github",
    ".pytest_cache",
    "htmlcov",
    "instance",
    "venv",
    ".coverage"
]